tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__globals__test__emit_futures_codegen@llvm21_2.snap
---
source: tket-qsystem/src/llvm/globals.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@__globals__.my_global = global { i1, i16 } { i1 false, i16 poison }

define internal { i16, i1 } @_hl.main.1(i16 %0, ptr %1, i1 %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %start_value = load { i1, i16 }, ptr @__globals__.my_global, align 2
  %3 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %0, 1
  store { i1, i16 } %3, ptr @__globals__.my_global, align 2
  %call_func = call i1 %1(i1 %2)
  %end_value = load { i1, i16 }, ptr @__globals__.my_global, align 2
  %4 = extractvalue { i1, i16 } %end_value, 1
  store { i1, i16 } %start_value, ptr @__globals__.my_global, align 2
  %mrv = insertvalue { i16, i1 } poison, i16 %4, 0
  %mrv8 = insertvalue { i16, i1 } %mrv, i1 %call_func, 1
  ret { i16, i1 } %mrv8
}
