tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__globals__test__emit_global_codegen@pre-mem2reg@llvm14.snap
---
source: tket-qsystem/src/llvm/globals.rs
assertion_line: 93
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@__globals__.my_global = global { i1, i64 } { i1 false, i64 poison }

define private { i1, i64 } @_hl.main.1({ i1, i64 } %0) {
alloca_block:
  %"0" = alloca { i1, i64 }, align 8
  %"2_0" = alloca { i1, i64 }, align 8
  %"4_0" = alloca { i1, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i1, i64 } %0, { i1, i64 }* %"2_0", align 4
  %"2_01" = load { i1, i64 }, { i1, i64 }* %"2_0", align 4
  %current_value = load { i1, i64 }, { i1, i64 }* @__globals__.my_global, align 4
  store { i1, i64 } %"2_01", { i1, i64 }* @__globals__.my_global, align 4
  store { i1, i64 } %current_value, { i1, i64 }* %"4_0", align 4
  %"4_02" = load { i1, i64 }, { i1, i64 }* %"4_0", align 4
  store { i1, i64 } %"4_02", { i1, i64 }* %"0", align 4
  %"03" = load { i1, i64 }, { i1, i64 }* %"0", align 4
  ret { i1, i64 } %"03"
}
