tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__globals__test__emit_globals_codegen@llvm21_1.snap
---
source: tket-qsystem/src/llvm/globals.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@__globals__.my_global = global { i1, i16 } { i1 false, i16 poison }

define internal { i1, i16, i16 } @_hl.main.1(ptr %0, i1 %1, i16 %2, i16 %3) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %start_value = load { i1, i16 }, ptr @__globals__.my_global, align 2
  %4 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %3, 1
  store { i1, i16 } %4, ptr @__globals__.my_global, align 2
  %call_func = call { i1, i16 } %0(i1 %1, i16 %2)
  %end_value = load { i1, i16 }, ptr @__globals__.my_global, align 2
  %5 = extractvalue { i1, i16 } %end_value, 1
  store { i1, i16 } %start_value, ptr @__globals__.my_global, align 2
  %6 = extractvalue { i1, i16 } %call_func, 0
  %7 = extractvalue { i1, i16 } %call_func, 1
  %mrv = insertvalue { i1, i16, i16 } poison, i1 %6, 0
  %mrv11 = insertvalue { i1, i16, i16 } %mrv, i16 %7, 1
  %mrv12 = insertvalue { i1, i16, i16 } %mrv11, i16 %5, 2
  ret { i1, i16, i16 } %mrv12
}
