tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__globals__test__emit_globals_codegen@pre-mem2reg@llvm21_1.snap
---
source: tket-qsystem/src/llvm/globals.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@__globals__.my_global = global { i1, i16 } { i1 false, i16 poison }

define internal { i16, i16, i1 } @_hl.main.1(i16 %0, ptr %1, i16 %2, i1 %3) {
alloca_block:
  %"0" = alloca i16, align 2
  %"1" = alloca i16, align 2
  %"2" = alloca i1, align 1
  %"2_0" = alloca i16, align 2
  %"2_1" = alloca ptr, align 8
  %"2_2" = alloca i16, align 2
  %"2_3" = alloca i1, align 1
  %"4_0" = alloca i16, align 2
  %"4_1" = alloca i16, align 2
  %"4_2" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i16 %0, ptr %"2_0", align 2
  store ptr %1, ptr %"2_1", align 8
  store i16 %2, ptr %"2_2", align 2
  store i1 %3, ptr %"2_3", align 1
  %"2_01" = load i16, ptr %"2_0", align 2
  %"2_12" = load ptr, ptr %"2_1", align 8
  %"2_23" = load i16, ptr %"2_2", align 2
  %"2_34" = load i1, ptr %"2_3", align 1
  %start_value = load { i1, i16 }, ptr @__globals__.my_global, align 2
  %4 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %"2_01", 1
  store { i1, i16 } %4, ptr @__globals__.my_global, align 2
  %call_func = call { i16, i1 } %"2_12"(i16 %"2_23", i1 %"2_34")
  %end_value = load { i1, i16 }, ptr @__globals__.my_global, align 2
  %5 = extractvalue { i1, i16 } %end_value, 1
  store { i1, i16 } %start_value, ptr @__globals__.my_global, align 2
  %6 = extractvalue { i16, i1 } %call_func, 0
  %7 = extractvalue { i16, i1 } %call_func, 1
  store i16 %5, ptr %"4_0", align 2
  store i16 %6, ptr %"4_1", align 2
  store i1 %7, ptr %"4_2", align 1
  %"4_05" = load i16, ptr %"4_0", align 2
  %"4_16" = load i16, ptr %"4_1", align 2
  %"4_27" = load i1, ptr %"4_2", align 1
  store i16 %"4_05", ptr %"0", align 2
  store i16 %"4_16", ptr %"1", align 2
  store i1 %"4_27", ptr %"2", align 1
  %"08" = load i16, ptr %"0", align 2
  %"19" = load i16, ptr %"1", align 2
  %"210" = load i1, ptr %"2", align 1
  %mrv = insertvalue { i16, i16, i1 } poison, i16 %"08", 0
  %mrv11 = insertvalue { i16, i16, i1 } %mrv, i16 %"19", 1
  %mrv12 = insertvalue { i16, i16, i1 } %mrv11, i1 %"210", 2
  ret { i16, i16, i1 } %mrv12
}
