tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__globals__test__emit_globals_codegen@pre-mem2reg@llvm21_2.snap
---
source: tket-qsystem/src/llvm/globals.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@__globals__.my_global = global { i1, i16 } { i1 false, i16 poison }

define internal { i1, i16 } @_hl.main.1(ptr %0, i1 %1, i16 %2) {
alloca_block:
  %"0" = alloca i1, align 1
  %"1" = alloca i16, align 2
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca i1, align 1
  %"2_2" = alloca i16, align 2
  %"4_0" = alloca i1, align 1
  %"4_1" = alloca i16, align 2
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store i1 %1, ptr %"2_1", align 1
  store i16 %2, ptr %"2_2", align 2
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load i1, ptr %"2_1", align 1
  %"2_23" = load i16, ptr %"2_2", align 2
  %start_value = load { i1, i16 }, ptr @__globals__.my_global, align 2
  %3 = extractvalue { i1, i16 } %start_value, 1
  %call_func = call { i1, i16, i16 } %"2_01"(i16 %3, i1 %"2_12", i16 %"2_23")
  %4 = extractvalue { i1, i16, i16 } %call_func, 0
  %5 = extractvalue { i1, i16, i16 } %call_func, 1
  %6 = extractvalue { i1, i16, i16 } %call_func, 2
  %7 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %5, 1
  store { i1, i16 } %7, ptr @__globals__.my_global, align 2
  store i1 %4, ptr %"4_0", align 1
  store i16 %6, ptr %"4_1", align 2
  %"4_04" = load i1, ptr %"4_0", align 1
  %"4_15" = load i16, ptr %"4_1", align 2
  store i1 %"4_04", ptr %"0", align 1
  store i16 %"4_15", ptr %"1", align 2
  %"06" = load i1, ptr %"0", align 1
  %"17" = load i16, ptr %"1", align 2
  %mrv = insertvalue { i1, i16 } poison, i1 %"06", 0
  %mrv8 = insertvalue { i1, i16 } %mrv, i16 %"17", 1
  ret { i1, i16 } %mrv8
}
